Added support for Text/string data type. Closes #4.

--- a/HiSystems.Interpreter.MonoTouch.csproj
+++ b/HiSystems.Interpreter.MonoTouch.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Operators\NotEqualToOperator.cs" />
     <Compile Include="Literals\DateTime.cs" />
     <Compile Include="Functions\Today.cs" />
+    <Compile Include="Literals\Text.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Engine\" />
