Added support for modulus operator. Closes #19.

--- a/HiSystems.Interpreter.MonoTouch.csproj
+++ b/HiSystems.Interpreter.MonoTouch.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Literals\DateTime.cs" />
     <Compile Include="Functions\Today.cs" />
     <Compile Include="Literals\Text.cs" />
+    <Compile Include="Operators\ModulusOperator.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Engine\" />
