Added support for Max and Array functions. Closes #22.

--- a/HiSystems.Interpreter.MonoTouch.csproj
+++ b/HiSystems.Interpreter.MonoTouch.csproj
@@ -73,6 +73,8 @@
     <Compile Include="Literals\Text.cs" />
     <Compile Include="Operators\ModulusOperator.cs" />
     <Compile Include="Functions\Format.cs" />
+    <Compile Include="Functions\Max.cs" />
+    <Compile Include="Functions\ArrayFunction.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Engine\" />
