Adjusted MonoTouch project settings to use tabs rather than spaces

--- a/HiSystems.Interpreter.MonoTouch.csproj
+++ b/HiSystems.Interpreter.MonoTouch.csproj
@@ -84,4 +84,13 @@
   <ItemGroup>
     <None Include="readme.md" />
   </ItemGroup>
+  <ProjectExtensions>
+    <MonoDevelop>
+      <Properties>
+        <Policies>
+          <TextStylePolicy TabsToSpaces="False" EolMarker="Windows" inheritsSet="VisualStudio" inheritsScope="text/plain" scope="text/plain" />
+        </Policies>
+      </Properties>
+    </MonoDevelop>
+  </ProjectExtensions>
 </Project>
