Added Min function. Closes #26.

--- a/HiSystems.Interpreter.MonoTouch.csproj
+++ b/HiSystems.Interpreter.MonoTouch.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Functions\Format.cs" />
     <Compile Include="Functions\Max.cs" />
     <Compile Include="Functions\ArrayFunction.cs" />
+    <Compile Include="Functions\Min.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Engine\" />
