Refactored Expression to support multiple implementations. Closes #30.
No functional changes.

--- a/HiSystems.Interpreter.MonoTouch.csproj
+++ b/HiSystems.Interpreter.MonoTouch.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Functions\ArrayFunction.cs" />
     <Compile Include="Functions\Min.cs" />
     <Compile Include="Functions\Len.cs" />
+    <Compile Include="Engine\ExpressionParsed.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Engine\" />
