Update .NET project reference to support just-in-time / on demand expression parsing. #29.

--- a/HiSystems.Interpreter.csproj
+++ b/HiSystems.Interpreter.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Engine\Engine.cs" />
     <Compile Include="Engine\Expression.cs" />
     <Compile Include="Engine\ExpressionParsed.cs" />
+    <Compile Include="Engine\ExpressionParseOnDemand.cs" />
     <Compile Include="Engine\Token.cs" />
     <Compile Include="Engine\Tokenizer.cs" />
     <Compile Include="Functions\ArrayFunction.cs" />
