--- a/HiSystems.Interpreter.csproj
+++ b/HiSystems.Interpreter.csproj
@@ -44,6 +44,10 @@
     <Compile Include="Constructs\IConstruct.cs" />
     <Compile Include="Constructs\Operation.cs" />
     <Compile Include="Constructs\Variable.cs" />
+    <Compile Include="Converters\BooleanTypeConverter.cs" />
+    <Compile Include="Converters\DateTimeTypeConverter.cs" />
+    <Compile Include="Converters\NumberTypeConverter.cs" />
+    <Compile Include="Converters\TextTypeConverter.cs" />
     <Compile Include="Engine\Engine.cs" />
     <Compile Include="Engine\Expression.cs" />
     <Compile Include="Engine\ExpressionParsed.cs" />
